# l-bom

./: .gitignore  README.md  index.html  pyproject.toml  style.css
.github/workflows/: hf-sync.yml
llm_sbom/: __init__.py  cli.py  huggingface.py  output.py  schema.py
tests/: test_cli.py
