[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "L-BOM"
version = "0.1.0"
description = "Generate Software Bill of Materials documents for local LLM model files."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "click",
  "rich",
  "dataclasses-json",
]

[project.scripts]
L-BOM = "llm_sbom.cli:main"

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8,<10",
  "ruff>=0.11,<1",
]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["llm_sbom*"]

